crates/analyzer/tests/snapshots/errors__pow_with_signed_exponent.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: The right hand side of this operation must be unsigned
  ┌─ [snippet]:5:11
  │
5 │   base ** exp
  │           ^^^ incompatible signed numeric


