crates/analyzer/tests/snapshots/errors__pow_with_wrong_capacity.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: The right hand side of this operation must fit into the left
  ┌─ [snippet]:5:11
  │
5 │   base ** exp
  │           ^^^ size too large


