crates/analyzer/tests/snapshots/errors__return_from_init.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `__init__` function has incorrect return type
  ┌─ compile_errors/return_from_init.fe:2:26
  │
2 │     pub fn __init__() -> i32:
  │                          ^^^ return type should be `()`
  │
  = Hint: Remove the return type specification.
  = Example: `pub fn __init__():`

error: expected function to return `()` but was `u256`
  ┌─ compile_errors/return_from_init.fe:3:9
  │
3 │         return 0
  │         ^^^^^^^^


